deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: AKS-migration-POC -deployment
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: AKS-migration-POC
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: AKS-migration-POC
    spec:
      containers:
      - name: my AKS-migration-POC
        image: AKS entrieswe should give.azurecr.io/AKS-migration-POC:v1
        imagePullPolicy: Always
        ports:
        - name: http-common
          containerPort: 80
        resources:
          limits:
            memory: "1Gi"
            cpu: "250m"
          requests:
            cpu: "20m"
            memory: "1Gi"	
        command: ["dotnet", "Sherlock_CommonAPI.dll"]        
      - name: sherlock-afs-container
        image: unipercontainerregistry.azurecr.io/sherlock-backend:v1
        imagePullPolicy: Always
        ports:
        - name: http-afs
          containerPort: 85
        resources:
          limits:
            memory: "1Gi"
            cpu: "250m"
          requests:
            cpu: "20m"
            memory: "1Gi"
        command: ["dotnet", "Sherlock_AFS.dll", "--urls", "http://0.0.0.0:85"]      
      - name: sherlock-tdc-container
        image: unipercontainerregistry.azurecr.io/sherlock-backend:v1
        imagePullPolicy: Always
        ports:
        - name: http-tdc
          containerPort: 90
        resources:
          limits:
            memory: "2Gi"
            cpu: "150m"
          requests:
            cpu: "20m"
            memory: "1Gi"
        command: ["dotnet", "Sherlock_TDC.dll", "--urls", "http://0.0.0.0:90"]   		
      - name: sherlock-snow-container
        image: unipercontainerregistry.azurecr.io/sherlock-backend:v1
        imagePullPolicy: Always
        ports:
        - name: http-snow
          containerPort: 95
        resources:
          limits:
            memory: "1Gi"
            cpu: "150m"
          requests:
            cpu: "20m"
            memory: "1Gi"
        command: ["dotnet", "Sherlock_SNOW.dll", "--urls", "http://0.0.0.0:95"]   
      - name: sherlock-userstat-container
        image: unipercontainerregistry.azurecr.io/sherlock-backend:v1
        imagePullPolicy: Always
        ports:
        - name: http-userstat
          containerPort: 100
        resources:
          limits:
            memory: "1Gi"
            cpu: "200m"
          requests:
            cpu: "20m"
            memory: "1Gi"
        command: ["dotnet", "Sherlock_CollectUserStatistics.dll", "--urls", "http://0.0.0.0:100"]   
---
apiVersion: v1
kind: Service
metadata:
  name: sherlock-service
spec:
  type: ClusterIP
  ports:
  - name: http-common
    port: 80
    targetPort: http-common 
  - name: http-afs
    port: 85
    targetPort: http-afs
  - name: http-tdc
    port: 90
    targetPort: http-tdc	
  - name: http-snow
    port: 95
    targetPort: http-snow
  - name: http-userstat
    port: 100
    targetPort: http-userstat	
  selector:
    app: sherlockapi

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sherlock-ingress
  namespace: sherlock-76987-dev
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "64k"
    appgw.ingress.kubernetes.io/backend-path-prefix: "/"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, PUT, POST, DELETE, PATCH, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "false"
    nginx.ingress.kubernetes.io/cors-allow-headers: "DNT, X-CustomHeader, Keep-Alive, User-Agent, X-Requested-With, If-Modified-Since,Cache-Control, Content-Type,Authorization"
spec:
  tls:
    - hosts:
      - sherlock-76987-dev.azure.uniper.energy
      secretName: sherlock-cert
  rules:    
  - host: sherlock-76987-dev.azure.uniper.energy
    http:
      paths:
      - path: /search(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: sherlock-service
            port:
              number: 80
      - path: /afs(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: sherlock-service
            port:
              number: 85     
      - path: /tdc(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: sherlock-service
            port:
              number: 90 		  
      - path: /snow(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: sherlock-service
            port:
              number: 95 	
      - path: /userstat(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: sherlock-service
            port:
              number: 100
